--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^5.2.2",
+    "@clerk/nextjs": "^5.2.8",
     "@prisma/client": "^5.17.0",
     "@tanstack/react-query": "^5.8.1",
     "@tanstack/react-query-devtools": "^5.8.1",
     "axios": "^1.7.2",
-    "next": "14.2.4",
+    "next": "^14.2.4",
     "openai": "^4.14.2",
     "react": "^18",
     "react-dom": "^18",
